--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,10 @@ h1 {
   text-align: center;
 }
 
+nav {
+  color:rgb(255, 255, 255)
+}
+
 .wrapper {
   display: grid;
   grid-template-columns: repeat(3, 100%);
@@ -47,27 +51,29 @@ h1 {
   left: 20px;
   color: #fff;
 }
-.wrapper section .arrow__btn {
+.wrapper section .arrowbtn {
   position: absolute;
   color: #fff;
   text-decoration: none;
   font-size: 6em;
-  background: rgb(0, 0, 0);
+  background: rgb(255, 255, 255);
   width: 80px;
   padding: 20px;
   text-align: center;
   z-index: 1;
 }
-.wrapper section .left-arrow {
+.wrapper section .leftarrowbtn {
   top: 0;
   bottom: 0;
   left: 0;
+  color: #fff;
   background: linear-gradient(-90deg, rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 100%);
 }
-.wrapper section .right-arrow {
+.wrapper section .rightarrowbtn {
   top: 0;
   bottom: 0;
   right: 0;
+  color: #fff;
   background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 100%);
 }
 
