--- a/styles/style.css
+++ b/styles/style.css
@@ -1,29 +1,3 @@
-@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.1.0/css/font-awesome.min.css";
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  background-color: #141414;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-.wrapper {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: no-wrap;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  overflow: hidden;
-}
-.container:hover .arrow-right,
-.container:hover .arrow-left {
-  opacity: 1;
-  transition: 0.2s;
-}
-
-
-/*
 html {
   scroll-behavior: smooth;
 }
@@ -36,7 +10,7 @@ body {
 
 nav {
   position: grid;
-  font-family: 'Roboto';
+  /*font-family: 'Roboto';*/
 }
 
 .nav .h1 {
@@ -53,7 +27,6 @@ nav {
   grid-template-columns: repeat(3, 100%);
   overflow: hidden;
   scroll-behavior: smooth;
-  white-space: nowrap;
 }
 .wrapper section {
   width: 100%;
@@ -62,11 +35,6 @@ nav {
   grid-template-columns: repeat(5, auto);
   margin: 20px 0;
 }
-
-.wrapper section .label{
-  color:rgb(255, 255, 255);
-}
-
 .wrapper section .item {
   position: relative;
   padding: 0 2px;
@@ -88,8 +56,6 @@ nav {
   left: 20px;
   color: #fff;
 }
-*/
-/*
 .wrapper section .arrowbtn {
   position: absolute;
   color: #fff;
@@ -101,11 +67,7 @@ nav {
   text-align: center;
   z-index: 1;
 }
-*/
-
-/*
 .wrapper section .leftarrowbtn {
-  position: grid;
   top: 0;
   bottom: 0;
   left: 0;
@@ -113,15 +75,14 @@ nav {
   background: linear-gradient(-90deg, rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 100%);
 }
 .wrapper section .rightarrowbtn {
-  position: grid;
   top: 0;
   bottom: 0;
   right: 0;
   color: #fff;
   background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 100%);
 }
-*/
 
+/*# sourceMappingURL=test.css.map */
 
 
 
@@ -141,11 +102,10 @@ nav {
 
 /* Modal Content/Box */
 .modal-content {
-  background-color: #000000;
+  background-color: #fefefe;
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  color:rgb(255, 255, 255);
   width: 80%; /* Could be more or less, depending on screen size */
 }
 
