--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:700,900');
+
 html {
   scroll-behavior: smooth;
 }
@@ -5,84 +7,185 @@ html {
 body {
   margin: 0;
   background-color: #000;
-  font-family: Arial;
+  font-family: 'Roboto';
+  font-size:100%;
 }
 
 nav {
-  position: grid;
-  /*font-family: 'Roboto';*/
+  display: flex;
+  align-items: baseline;
+
+  justify-content: space-around;
+  padding: 20px;
 }
 
-.nav .h1 {
+nav h1 {
   color: red;
-  text-align: center;
+  font-size: 2.5em;
 }
 
-.nav .a{
+nav h1:hover {
+  cursor: pointer;
+}
+
+nav a{
   color:rgb(255, 255, 255);
 }
 
+nav a:hover {
+  cursor: pointer;
+}
+
 .wrapper {
-  display: grid;
+  display: flex;
   grid-template-columns: repeat(3, 100%);
   overflow: hidden;
   scroll-behavior: smooth;
+  flex-direction: column;
 }
+
 .wrapper section {
   width: 100%;
   position: relative;
-  display: grid;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
   grid-template-columns: repeat(5, auto);
   margin: 20px 0;
 }
+
 .wrapper section .item {
   position: relative;
   padding: 0 2px;
   transition: 250ms all;
 }
+
 .wrapper section .item:hover {
   margin: 0 40px;
   transform: scale(1.2);
+  cursor:pointer;
 }
+
 .wrapper section .item .heading {
   position: absolute;
   bottom: 20px;
   left: 20px;
   color: #fff;
 }
+
 .wrapper section .item .duration {
   position: absolute;
   bottom: 0;
   left: 20px;
   color: #fff;
 }
-.wrapper section .arrowbtn {
-  position: absolute;
-  color: #fff;
-  text-decoration: none;
-  font-size: 6em;
-  background: rgb(255, 255, 255);
-  width: 80px;
-  padding: 20px;
-  text-align: center;
-  z-index: 1;
+
+.wrapper section .bestmovie{
+  display: flex;
 }
+
+.wrapper .bestmoviesection{
+  display: inline-flex;
+}
+
+.wrapper .bestmoviesection .secondcolumn{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 50%;
+}
+
+.wrapper section .bestmoviedetails{
+  display: flex;
+  color: white;
+  flex-direction: column;
+  justify-content:space-between;
+}
+
+.wrapper section .bestmoviedetails .bestmovietitle{
+  display: flex;
+  font-size:300%
+}
+
+.wrapper section .bestmoviedetails .bestmovieactors{
+  display: flex;
+  margin-top: 1%;
+}
+
+.wrapper section .bestmoviedetails .bestmoviedirectors{
+  display: flex;
+  margin-top: 5%;
+}
+
+.wrapper section .bestmoviebutton {
+  height: 60px;
+  width: 180px;
+  font-family: 'Roboto';
+  font-size:x-large;
+  color: red;
+  background-color: white;
+  position: relative;
+
+  writing-mode: horizontal-tb !important;
+  text-rendering: auto;
+  letter-spacing: normal;
+  word-spacing: normal;
+  text-transform: none;
+  text-indent: 0px;
+  text-shadow: none;
+  text-align: center;
+  font-family: 'Roboto';
+}
+
+.wrapper section .bestmoviebutton:hover {
+  cursor:pointer;
+
+  /*box-shadow: inset 0 0 20px rgba(255,166,172, .5), 0 0 20px rgba(255,126,133, .2);*/
+  outline-color: rgba(255,166,170,0);
+  outline-offset: 15px;
+  text-shadow: 1px 1px 2px #0a4660;
+}
+
+.wrapper label{
+  color:white;
+  clear: both;
+  width: 100%;
+  margin: 20px;
+}
+
 .wrapper section .leftarrowbtn {
   top: 0;
   bottom: 0;
-  left: 0;
+  left: 20px;
+  display: block;
+  width: 20px;
+  position: absolute;
   color: #fff;
-  background: linear-gradient(-90deg, rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 100%);
+  background-color: transparent;
+  font-size: 2.5em;
+  border-color: transparent;
 }
+
+.wrapper section .leftarrowbtn:hover{
+  cursor: pointer;
+}
+
 .wrapper section .rightarrowbtn {
   top: 0;
   bottom: 0;
-  right: 0;
+  right: 20px;
+  display: block;
+  width: 20px;
+  position: absolute;
   color: #fff;
-  background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 100%);
+  background-color: transparent;
+  font-size: 2.5em;
+  border-color: transparent;
 }
 
-/*# sourceMappingURL=test.css.map */
+.wrapper section .rightarrowbtn:hover {
+  cursor: pointer;
+}
 
 
 
@@ -96,18 +199,26 @@ nav {
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
+  /*background-color: transparent;*/
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
 /* Modal Content/Box */
 .modal-content {
-  background-color: #fefefe;
+  display: inline-flex;
+  column-gap: 2em;
+  /*clear:both;
+  justify-content:space-between;*/
+  background-color: black;
+  color:white;
+  /*background-color: #fefefe;*/
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
 }
+
 
 /* The Close Button */
 .close {
