--- a/styles/style.css
+++ b/styles/style.css
@@ -107,7 +107,7 @@ nav a:hover {
   font-size:300%
 }
 
-.wrapper section .bestmoviedetails .bestmovieyear{
+.wrapper section .bestmoviedetails .bestmovieyeargenres{
   display: flex;
   margin-top: 5%;
 }
