--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ nav {
 
 nav h1 {
   color: red;
-  font-size: 2.5em;
+  font-size: 3.5em;
 }
 
 nav h1:hover {
@@ -109,7 +109,7 @@ nav a:hover {
 
 .wrapper section .bestmoviedetails .bestmovieyeargenres{
   display: flex;
-  margin-top: 5%;
+  margin-top: 3%;
 }
 
 .wrapper section .bestmoviedetails .bestmovieactors{
@@ -122,7 +122,14 @@ nav a:hover {
   margin-top: 1%;
 }
 
+.wrapper section .bestmoviedetails .bestmoviedescription{
+  display: flex;
+  margin-top: 1%;
+}
+
 .wrapper section .bestmoviebutton {
+  margin-top: 2%;
+  
   height: 50px;
   width: 180px;
   font-family: 'Roboto';
