moved bestmovie h3 in lower section and added paginationDiv

--- a/styles/style.css
+++ b/styles/style.css
@@ -84,8 +84,19 @@ nav a:hover {
   display: flex;
 }
 
+
 .wrapper .bestmoviesection{
+  display: flex;
+  flex-direction: column;
+}
+
+
+.wrapper .bestmoviesection .paginationdiv{
   display: inline-flex;
+  width: 100%;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 20px 0;
 }
 
 .wrapper .bestmoviesection .secondcolumn{
